--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,12 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   margin: 0;
+  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+
+  flex-direction: column;
   background-color: rgb(47, 45, 45);
   text-align: center;
 }
@@ -40,8 +42,16 @@ body {
 }
 
 main {
-  width: 350px;
+  width: 250px;
   background-color: white;
+  text-align: center
+}
+
+#img-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 125px;
 }
 
 img {
@@ -49,8 +59,23 @@ img {
   border: 5px solid rgb(14, 185, 65);
 }
 
+h1  {
+  text-align: center;
+  font-size: 24px;
+}
+
+#occupation {
+  background-color: rgb(236, 240, 241);
+  height: 60px;
+}
+
 #brand {
   display: none;
+}
+
+
+p {
+  margin: 4px 0;
 }
 
 #free {
@@ -73,8 +98,8 @@ font-size: 18px;
 
 
 #phone {
-  background-color: lightgreen;
-  width: 175px;
+  background-color: limegreen;
+  width: 125px;
   height: 60px;
   display: flex;
   align-items: center;
@@ -86,17 +111,14 @@ font-size: 18px;
   margin: 0px;
 }
 
-#occupation {
-  background-color: rgb(236, 240, 241);
-  height: 80px;
-}
+
 
 #chatbox {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #248235;
-  width: 175px;
+  background-color: green;
+  width: 125px;
   height: 60px;
 }
 
@@ -110,69 +132,85 @@ font-size: 18px;
 }
 
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 768px) {
   body {
-    /* background-color: gray;
-    Use a system font, if none are available use an available sans-sarif   font
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-      margin: 0;
-      display: grid;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      background-color: rgb(47, 45, 45);
-      text-align: center; */
-      color: red;
-
+   
   }
   
 
-  .items-a {
-    grid-column-start: 2;
-    grid-column-end: 5;
-  }
-
-  .items-a {
-    grid-column-start: 2;
-    grid-column-end: 5;  
-  }
-
-
-  #status {
-    display: flex;
-    justify-content: flex-end;
-    align-content: 5px;
-    padding: 5px 5px;
-    color: grey;
-  }
-  
   main {
     background-color: white;
     display: grid;
-    grid-template-columns: 300px 300px;
+    grid-template-columns: 275px 300px;
+    grid-template-rows: 75px 75px 75px 75px;
+    width: 625px;
   }
+
   
-  img {
+  h1  {
     display: grid;
-    align-items: start;
+    text-align: left;
+    font-size: 24px;
+    grid-column-start: 2;
+    font-size: 25px;
+    margin-left: 25px;
+
+  }
+
+    img {
+    justify-self: center;
+    display: grid;
+    justify-content: center;
     border-radius: 50%;
     border: 5px solid rgb(14, 185, 65);
+    /* grid-column-start: 2;
+    grid-column-end: 3; */
+    grid-row-start: 2;
+    height: 150px;
   }
-  
-  #brand {
-    grid-column-start: 2;
+
+  #status {
     display: grid;
+    text-align: left;
+    padding: 10px;
+    color: grey;
+    grid-column-start: 1;
+    justify-self: start;
+   
+
+  }
+
+
+  #brand {
+    display: grid;
+    display: block;
+    text-align: left;
+    border-left: 5px solid limegreen;
+    padding-left: 20px;
+    margin: 20px;
+    font-size: 16px;
+    grid-column-start: 2;
+    grid-row-start: 3;
+    grid-row-end: 5;
+
+
   }
   
   #offer {
     display: grid;
+    text-align: left;
+    padding: 25px;
     grid-column-start: 2;
-
+    grid-row-start: 5;
+    
   }
 
   #occupation {
     display: grid;
+    grid-column-start: 2;
+    text-align: left;
+    background-color: white;
+    margin-left: 25px;
   }
 
   #free {
@@ -195,35 +233,38 @@ font-size: 18px;
   }
   
 
-
-
   #phone {
     background-color: lightgreen;
-    width: 300px;
+    width: 150px;
     height: 60px;
-    display: flex;
+    display: grid;
     align-items: center;
     justify-content: center;
   }
   
   #contact {
-    display: inline-flex;
+    display: flex;
     margin: 0px;
+    /* grid-column-start: ; */
+    grid-column-start: 1;
+    grid-row-start: 5;
+    /* align-items: inline; */
+
   }
+
   
   #chatbox {
-    display: flex;
+    display: grid;
     align-items: center;
     justify-content: center;
     background-color: #248235;
-    width: 300px;
+    width:150px;
     height: 60px;
+    
+
   }
   
-  #contact{
-    display: inline-flex;
-    margin: 0px;
-  }
+ 
   
   #contact > p {
     margin: 0;
